[project]
name = "uv-pytorch-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies=[
  "torch==2.1.2",
  "torchvision",
  "torchaudio",
  "zarr==3.1.0",
  "numpy==1.26",
  "marimo>=0.14.12",
  "einops>=0.8.1",
  "pandas>=2.3.1",
  "fastparquet>=2024.11.0",
  "matplotlib>=3.10.5",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
